Add notebook 05 (reviewed; might be unfinished?)

--- a/week1_session4_scikit-learn.ipynb
+++ b/week1_session4_scikit-learn.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "array(['CN', 'Dementia', 'MCI', nan, '1846260', '1600371'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "array(['CN', 'Dementia', 'MCI'], dtype=object)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "max      30.000000  11207.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -719,15 +719,15 @@
     {
      "data": {
       "text/plain": [
-       "11988    30.0\n",
-       "4863     26.0\n",
-       "1765     22.0\n",
-       "1957     25.0\n",
-       "3964     29.0\n",
+       "4979    27.0\n",
+       "369     29.0\n",
+       "1581    30.0\n",
+       "1632    28.0\n",
+       "8302    26.0\n",
        "Name: MMSE, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -752,15 +752,15 @@
     {
      "data": {
       "text/plain": [
-       "11988    7582.0\n",
-       "4863     5581.0\n",
-       "1765     3635.0\n",
-       "1957     4369.0\n",
-       "3964     6469.0\n",
+       "4979    5671.0\n",
+       "369     5452.0\n",
+       "1581    5752.0\n",
+       "1632    6420.0\n",
+       "8302    6216.0\n",
        "Name: Hippocampus, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,21 +779,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "Expected 2D array, got 1D array instead:\narray=[30. 26. 22. ... 29. 26. 28.].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample.",
+     "evalue": "Expected 2D array, got 1D array instead:\narray=[27. 29. 30. ... 21. 27. 29.].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-b01dde0b48b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mregressor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Fit the regressor to our training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mregressor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mregr_X_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregr_y_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-b01dde0b48b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mregressor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Fit the regressor to our training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mregressor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mregr_X_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregr_y_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/.local/anaconda/envs/teachopencadd/lib/python3.6/site-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    490\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m         X, y = check_X_y(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[0;32m--> 492\u001b[0;31m                          y_numeric=True, multi_output=True)\n\u001b[0m\u001b[1;32m    493\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/anaconda/envs/teachopencadd/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    753\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    754\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 755\u001b[0;31m                     estimator=estimator)\n\u001b[0m\u001b[1;32m    756\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    757\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
       "\u001b[0;32m~/.local/anaconda/envs/teachopencadd/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    554\u001b[0m                     \u001b[0;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    555\u001b[0m                     \u001b[0;34m\"your data has a single feature or array.reshape(1, -1) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 556\u001b[0;31m                     \"if it contains a single sample.\".format(array))\n\u001b[0m\u001b[1;32m    557\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[0;31m# in the future np.flexible dtypes will be handled like object dtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected 2D array, got 1D array instead:\narray=[30. 26. 22. ... 29. 26. 28.].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
+      "\u001b[0;31mValueError\u001b[0m: Expected 2D array, got 1D array instead:\narray=[27. 29. 30. ... 21. 27. 29.].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
      ]
     }
    ],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -877,22 +877,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[7010.50835299],\n",
-       "       [7010.50835299],\n",
-       "       [6513.31442037],\n",
+       "array([[7012.12616115],\n",
+       "       [7012.12616115],\n",
+       "       [7174.15107063],\n",
        "       ...,\n",
-       "       [5850.38917687],\n",
-       "       [7176.23966387],\n",
-       "       [6347.5831095 ]])"
+       "       [5715.92688528],\n",
+       "       [7174.15107063],\n",
+       "       [6526.0514327 ]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,14 +912,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 1162286.063540406 ; R2: 0.23861518233217394\n"
+      "MSE: 1185036.4427928193 ; R2: 0.2566875115962818\n"
      ]
     }
    ],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,16 +1030,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['CN', 'MCI', 'CN', ..., 'CN', 'CN', 'CN'], dtype=object)"
+       "array(['CN', 'Dementia', 'CN', ..., 'CN', 'Dementia', 'CN'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,14 +1059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RF predicted 650 points out of 1095. This is a 59.36% success rate.\n"
+      "RF predicted 639 points out of 1095. This is a 58.36% success rate.\n"
      ]
     }
    ],
@@ -1079,14 +1079,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score = 59.36%\n"
+      "Score = 58.36%\n"
      ]
     }
    ],
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score = 61.95%\n"
+      "Score = 65.12%\n"
      ]
     }
    ],
@@ -1184,6 +1184,48 @@
     "mmse_classifier_custom.fit(mmse_X_train, mmse_y_train)\n",
     "mmse_custom_score = mmse_classifier_custom.score(mmse_X_test, mmse_y_test)\n",
     "print(f\"Score = {100*mmse_custom_score:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if we add more variables? Maybe `AGE` can help?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jaime/.local/anaconda/envs/teachopencadd/lib/python3.6/site-packages/ipykernel_launcher.py:9: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score = 63.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define and clean\n",
+    "age_mmse_Xy = df[['MMSE', 'AGE', 'DX']].dropna()\n",
+    "age_mmse_X = age_mmse_Xy.MMSE.values.reshape(-1, 1)\n",
+    "age_mmse_y = age_mmse_Xy.DX.values.reshape(-1, 1)\n",
+    "# split\n",
+    "age_mmse_X_train, age_mmse_X_test, age_mmse_y_train, age_mmse_y_test =  train_test_split(age_mmse_X, age_mmse_y, test_size=0.2)\n",
+    "age_mmse_classifier_custom = RandomForestClassifier(n_estimators=100)\n",
+    "# Do not modify below here\n",
+    "age_mmse_classifier_custom.fit(age_mmse_X_train, age_mmse_y_train)\n",
+    "age_mmse_custom_score = mmse_classifier_custom.score(age_mmse_X_test, age_mmse_y_test)\n",
+    "print(f\"Score = {100*age_mmse_custom_score:.2f}%\")"
    ]
   },
   {
