--- a/week1_session5_deep-learning.ipynb
+++ b/week1_session5_deep-learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutors: Fabian Eitel (Fabian.Eitel@charite.de) and Talia Kimber"
+    "Tutors: Fabian Eitel (Fabian.Eitel@charite.de) and Talia Kimber (talia.kimber@charite.de)"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "# 1. Aims of this session\n",
     "\n",
-    "Get a rough idea of how artifical neural networks (ANNs) work, how an implementation in Keras looks like and how suitable they are for tabular data."
+    "Get a rough idea of how artificial neural networks (ANNs) work, how an implementation in Keras looks like and how suitable they are for tabular data."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "## Practical\n",
     "\n",
     "* Learn to understand the basics using the Tensorflow playground\n",
-    "* Learn to read a model defintion in Python using Keras\n",
+    "* Learn to read a model definition in Python using Keras\n",
     "* Run a pipeline of an ANN on the ADNI tabular data\n",
     "* Investigate what filters learn at different layers"
    ]
@@ -286,10 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import required packages\n",
@@ -302,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/fabiane/anaconda2/envs/postal/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3018: DtypeWarning: Columns (16,17,18,99,100) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/jaime/.local/anaconda/envs/teachopencadd/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (16,17,18,99,100) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -345,7 +343,6 @@
        "      <th>WORK</th>\n",
        "      <th>PTETHCAT</th>\n",
        "      <th>...</th>\n",
-       "      <th>TAU_bl</th>\n",
        "      <th>PTAU_bl</th>\n",
        "      <th>FDG_bl</th>\n",
        "      <th>PIB_bl</th>\n",
@@ -355,86 +352,87 @@
        "      <th>Month</th>\n",
        "      <th>M</th>\n",
        "      <th>update_stamp</th>\n",
+       "      <th>Unnamed: 109</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
+       "      <td>128</td>\n",
        "      <td>bl</td>\n",
-       "      <td>11</td>\n",
+       "      <td>164</td>\n",
        "      <td>2005-09-08</td>\n",
        "      <td>CN</td>\n",
-       "      <td>74.3</td>\n",
+       "      <td>74.2</td>\n",
        "      <td>Male</td>\n",
        "      <td>16</td>\n",
        "      <td>technical writer and editor</td>\n",
        "      <td>Not Hisp/Latino</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>1.36665</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2019-12-04 04:19:56.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>129</td>\n",
        "      <td>bl</td>\n",
-       "      <td>11</td>\n",
+       "      <td>164</td>\n",
        "      <td>2005-09-12</td>\n",
        "      <td>AD</td>\n",
-       "      <td>81.3</td>\n",
+       "      <td>82.4</td>\n",
        "      <td>Male</td>\n",
        "      <td>18</td>\n",
        "      <td>Secretary</td>\n",
        "      <td>Not Hisp/Latino</td>\n",
        "      <td>...</td>\n",
-       "      <td>239.7</td>\n",
        "      <td>22.83</td>\n",
        "      <td>1.08355</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2019-12-04 04:19:56.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>129</td>\n",
        "      <td>m06</td>\n",
-       "      <td>11</td>\n",
+       "      <td>164</td>\n",
        "      <td>2006-03-13</td>\n",
        "      <td>AD</td>\n",
-       "      <td>81.3</td>\n",
+       "      <td>81.4</td>\n",
        "      <td>Male</td>\n",
        "      <td>18</td>\n",
        "      <td>Elementary school teacher</td>\n",
        "      <td>Not Hisp/Latino</td>\n",
        "      <td>...</td>\n",
-       "      <td>239.7</td>\n",
        "      <td>22.83</td>\n",
        "      <td>1.08355</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.498289</td>\n",
        "      <td>5.96721</td>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>2019-12-04 04:19:56.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
+       "      <td>129</td>\n",
        "      <td>m12</td>\n",
-       "      <td>11</td>\n",
+       "      <td>164</td>\n",
        "      <td>2006-09-12</td>\n",
        "      <td>AD</td>\n",
        "      <td>81.3</td>\n",
@@ -443,93 +441,93 @@
        "      <td>Communication</td>\n",
        "      <td>Not Hisp/Latino</td>\n",
        "      <td>...</td>\n",
-       "      <td>239.7</td>\n",
        "      <td>22.83</td>\n",
        "      <td>1.08355</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.999316</td>\n",
        "      <td>11.96720</td>\n",
-       "      <td>12</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>2019-12-04 04:19:56.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3</td>\n",
+       "      <td>129</td>\n",
        "      <td>m24</td>\n",
-       "      <td>11</td>\n",
+       "      <td>164</td>\n",
        "      <td>2007-09-12</td>\n",
        "      <td>AD</td>\n",
-       "      <td>81.3</td>\n",
+       "      <td>80.5</td>\n",
        "      <td>Male</td>\n",
        "      <td>18</td>\n",
        "      <td>Accounting</td>\n",
        "      <td>Not Hisp/Latino</td>\n",
        "      <td>...</td>\n",
-       "      <td>239.7</td>\n",
        "      <td>22.83</td>\n",
        "      <td>1.08355</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.998630</td>\n",
        "      <td>23.93440</td>\n",
-       "      <td>24</td>\n",
+       "      <td>24.0</td>\n",
        "      <td>24.0</td>\n",
        "      <td>2019-12-04 04:19:56.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 109 columns</p>\n",
+       "<p>5 rows × 110 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   RID VISCODE  SITE    EXAMDATE DX_bl   AGE PTGENDER  PTEDUCAT  \\\n",
-       "0    2      bl    11  2005-09-08    CN  74.3     Male        16   \n",
-       "1    3      bl    11  2005-09-12    AD  81.3     Male        18   \n",
-       "2    3     m06    11  2006-03-13    AD  81.3     Male        18   \n",
-       "3    3     m12    11  2006-09-12    AD  81.3     Male        18   \n",
-       "4    3     m24    11  2007-09-12    AD  81.3     Male        18   \n",
+       "0  128      bl   164  2005-09-08    CN  74.2     Male        16   \n",
+       "1  129      bl   164  2005-09-12    AD  82.4     Male        18   \n",
+       "2  129     m06   164  2006-03-13    AD  81.4     Male        18   \n",
+       "3  129     m12   164  2006-09-12    AD  81.3     Male        18   \n",
+       "4  129     m24   164  2007-09-12    AD  80.5     Male        18   \n",
        "\n",
-       "                          WORK         PTETHCAT          ...           TAU_bl  \\\n",
-       "0  technical writer and editor  Not Hisp/Latino          ...              NaN   \n",
-       "1                    Secretary  Not Hisp/Latino          ...            239.7   \n",
-       "2    Elementary school teacher  Not Hisp/Latino          ...            239.7   \n",
-       "3                Communication  Not Hisp/Latino          ...            239.7   \n",
-       "4                   Accounting  Not Hisp/Latino          ...            239.7   \n",
+       "                          WORK         PTETHCAT  ... PTAU_bl   FDG_bl PIB_bl  \\\n",
+       "0  technical writer and editor  Not Hisp/Latino  ...     NaN  1.36665    NaN   \n",
+       "1                    Secretary  Not Hisp/Latino  ...   22.83  1.08355    NaN   \n",
+       "2    Elementary school teacher  Not Hisp/Latino  ...   22.83  1.08355    NaN   \n",
+       "3                Communication  Not Hisp/Latino  ...   22.83  1.08355    NaN   \n",
+       "4                   Accounting  Not Hisp/Latino  ...   22.83  1.08355    NaN   \n",
        "\n",
-       "  PTAU_bl   FDG_bl  PIB_bl  AV45_bl  Years_bl  Month_bl Month     M  \\\n",
-       "0     NaN  1.36665     NaN      NaN  0.000000   0.00000     0   0.0   \n",
-       "1   22.83  1.08355     NaN      NaN  0.000000   0.00000     0   0.0   \n",
-       "2   22.83  1.08355     NaN      NaN  0.498289   5.96721     6   6.0   \n",
-       "3   22.83  1.08355     NaN      NaN  0.999316  11.96720    12  12.0   \n",
-       "4   22.83  1.08355     NaN      NaN  1.998630  23.93440    24  24.0   \n",
+       "   AV45_bl  Years_bl  Month_bl Month     M           update_stamp  \\\n",
+       "0      NaN  0.000000   0.00000   0.0   0.0  2019-12-04 04:19:56.0   \n",
+       "1      NaN  0.000000   0.00000   0.0   0.0  2019-12-04 04:19:56.0   \n",
+       "2      NaN  0.498289   5.96721   6.0   6.0  2019-12-04 04:19:56.0   \n",
+       "3      NaN  0.999316  11.96720  12.0  12.0  2019-12-04 04:19:56.0   \n",
+       "4      NaN  1.998630  23.93440  24.0  24.0  2019-12-04 04:19:56.0   \n",
        "\n",
-       "            update_stamp  \n",
-       "0  2019-12-04 04:19:56.0  \n",
-       "1  2019-12-04 04:19:56.0  \n",
-       "2  2019-12-04 04:19:56.0  \n",
-       "3  2019-12-04 04:19:56.0  \n",
-       "4  2019-12-04 04:19:56.0  \n",
+       "   Unnamed: 109  \n",
+       "0           NaN  \n",
+       "1           NaN  \n",
+       "2           NaN  \n",
+       "3           NaN  \n",
+       "4           NaN  \n",
        "\n",
-       "[5 rows x 109 columns]"
+       "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 473,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load data table\n",
-    "df = pd.read_csv(\"alzheimers_disease.csv\")\n",
+    "df = pd.read_csv(\"data/alzheimers_disease_rand.csv\")\n",
     "# Print first 5 rows\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -643,10 +641,11 @@
        " 'Month_bl',\n",
        " 'Month',\n",
        " 'M',\n",
-       " 'update_stamp']"
+       " 'update_stamp',\n",
+       " 'Unnamed: 109']"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,10 +656,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df[df.VISCODE == \"m12\"]\n",
@@ -669,10 +666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.dropna(subset=[\"Hippocampus\", \"DX\", \"Ventricles\"])"
@@ -687,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +690,7 @@
      "output_type": "stream",
      "text": [
       "Order before shuffling: [0 1 2 3 4]\n",
-      "Order after shuffling: [505 586 195 165 453]\n"
+      "Order after shuffling: [499 587 195 165 543]\n"
      ]
     }
    ],
@@ -712,14 +707,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of samples for training set: 472\n"
+      "Number of samples for training set: 473\n"
      ]
     }
    ],
@@ -734,10 +729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Take the remaining data and split it 50/50\n",
@@ -752,17 +745,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training samples: 472\n",
+      "Number of training samples: 473\n",
       "Number of validation samples: 60\n",
       "Number of test samples: 59\n",
-      "Total number of samples: 591\n"
+      "Total number of samples: 592\n"
      ]
     }
    ],
@@ -775,10 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = df[[\"Hippocampus\", \"AGE\", \"Ventricles\"]]\n",
@@ -793,10 +784,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler"
@@ -804,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +802,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,10 +814,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "classifier = SVC(C=10, kernel='poly')"
@@ -836,19 +823,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "  kernel='poly', max_iter=-1, probability=False, random_state=None,\n",
-       "  shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=10, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='poly',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,22 +846,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.373735  , -0.37634159,  0.78155586],\n",
-       "       [ 1.05409896, -0.78490257, -1.13213411],\n",
-       "       [-2.24543897,  1.56054006, -0.80227614],\n",
+       "array([[-0.08525704, -2.5468523 ,  0.23374712],\n",
+       "       [ 0.46067324, -0.73130483, -1.13330459],\n",
+       "       [-1.11172159,  1.52299995, -0.80895342],\n",
        "       ...,\n",
-       "       [ 0.42298183,  1.03092398, -0.34336257],\n",
-       "       [-1.25065291,  1.36382552, -0.82995622],\n",
-       "       [ 0.93817949, -2.87310311, -0.85099308]])"
+       "       [ 0.16151356,  0.88755834, -0.35729376],\n",
+       "       [-0.63732949,  1.17502002, -0.83601901],\n",
+       "       [ 0.40828417, -2.75866617, -0.85659059]])"
       ]
      },
-     "execution_count": 506,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,15 +872,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8340873692798338\n",
-      "0.8919413919413919\n"
+      "0.9012849380326771\n",
+      "0.8\n"
      ]
     }
    ],
@@ -911,12 +898,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Artifical Neural Network"
+    "## Artificial Neural Network\n",
+    "\n",
+    "_This is an unfinished example meant as an optional, advanced exercise_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +918,7 @@
    ],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D MaxPooling2D, Dropout\n",
+    "from keras.layers import Dense, Conv2D, MaxPooling2D, Dropout\n",
     "from keras.regularizers import l2\n",
     "from keras.optimizers import Adam\n",
     "from keras.models import load_model\n",
@@ -938,13 +927,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def SimpleNet(input_shape, drop_rate=0., weight_dcay=0.):\n",
+    "def SimpleNet(drop_rate=0., weight_dcay=0.):\n",
     "    model = Sequential()\n",
     "\n",
     "    model.add(Dense(units=8, activation='relu', kernel_regularizer=l2(weight_dcay)))\n",
@@ -955,22 +942,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = SimpleNet()\n",
     "opti = Adam(lr=lr, decay=lr_decay)\n",
     "model.compile(optimizer=opti, loss='binary_crossentropy', metrics=['accuracy'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (postal)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "postal"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -982,9 +974,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
