Move solutions to extra section (8. Solutions)

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -257,8 +257,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "pd.read  # Hit the tab key while your cursor sits after \"pd.read\""
    ]
@@ -1171,7 +1173,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f157f230690>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f601bae3210>"
       ]
      },
      "execution_count": 16,
@@ -1280,7 +1282,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f157e7e8950>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f601b113510>"
       ]
      },
      "execution_count": 20,
@@ -1470,7 +1472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Exercise"
+    "## 7. Exercise"
    ]
   },
   {
@@ -1498,20 +1500,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details>\n",
-    "<summary> > Solution</summary>\n",
-    "    \n",
-    "```python\n",
-    "data.head(4)\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Exercise 2: Get all column names in `data`"
    ]
   },
@@ -1528,20 +1516,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> > Solution</summary>\n",
-    "    \n",
-    "```python\n",
-    "data.columns\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1568,20 +1542,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details>\n",
-    "<summary> > Solution</summary>\n",
-    "    \n",
-    "```python\n",
-    "data['Geschlecht'].unique()\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Exercise 4: Get the number of COVID-19 recoveries in Berlin grouped by Berlin's districts."
    ]
   },
@@ -1598,20 +1558,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> > Solution</summary>\n",
-    "    \n",
-    "```python\n",
-    "data.groupby('Landkreis')['AnzahlGenesen'].sum()\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1638,20 +1584,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details>\n",
-    "<summary> > Solution</summary>\n",
-    "    \n",
-    "```python\n",
-    "data.groupby('Landkreis')['AnzahlTodesfall'].sum()\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Exercise 6: Plot the number of current COVID-19 cases in Berlin grouped by Berlin's districts (barplot)."
    ]
   },
@@ -1673,8 +1605,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 8. Solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__A word of encouragement :)__ \n",
+    "\n",
+    "Before you take a look at the solutions, try to solve the exercises yourself. All the information needed lives in _5. Practical_ - if you are stuck, first take a look at the material there. Talk to your fellow students. If you have a solution, then go ahead and take a look here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<details>\n",
-    "<summary> > Solution</summary>\n",
+    "<summary> > Solution 1</summary>\n",
+    "    \n",
+    "```python\n",
+    "data.head(4)\n",
+    "```\n",
+    "    \n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> > Solution 2</summary>\n",
+    "    \n",
+    "```python\n",
+    "data.columns\n",
+    "```\n",
+    "    \n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> > Solution 3</summary>\n",
+    "    \n",
+    "```python\n",
+    "data['Geschlecht'].unique()\n",
+    "```\n",
+    "    \n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> > Solution 4</summary>\n",
+    "    \n",
+    "```python\n",
+    "data.groupby('Landkreis')['AnzahlGenesen'].sum()\n",
+    "```\n",
+    "    \n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> > Solution 5</summary>\n",
+    "    \n",
+    "```python\n",
+    "data.groupby('Landkreis')['AnzahlTodesfall'].sum()\n",
+    "```\n",
+    "    \n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> > Solution 6</summary>\n",
     "    \n",
     "```python\n",
     "data.groupby('Altersgruppe')['AnzahlFall'].sum().plot(\n",
