Update commands added

--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version go to the tab 'Kernel' --> 'Change Kernel' and select *Python 3.6*.\n",
+    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version go to the tab *Kernel* --> *Change Kernel* and select *Python 3.6*.\n",
     "\n",
     "**matplotlib Update:**<br>\n",
     "The pre-installed version of the *matplotlib* in this environment is 3.0.0, but the following notebook requires **version 3.2.2**. Please update the *matplotlib* library by executing the following cell."
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please **restart the kernel** after the update. Go to the tab 'Kernel' --> 'Restart'. After the restart, you can check the version of your updated *matplotlib* library using the following command."
+    "Please **restart the kernel** after the update. Go to the tab *Kernel* --> *Restart*. After the restart, you can check the version of your updated *matplotlib* library using the following command."
    ]
   },
   {
