--- a/week1_session5_deep-learning.ipynb
+++ b/week1_session5_deep-learning.ipynb
@@ -27,7 +27,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First, please make sure, that you're using the Python 3/3.6 kernel!** You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab 'Kernel' --> 'Change Kernel' and select the correct kernel."
+    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab *Kernel* --> *Change Kernel* and select *Python 3.6*.\n",
+    "\n",
+    "**TensorFlow Update:**<br>\n",
+    "The pre-installed version of the tensorflow in this environment is 1.1.0, but the following notebook requires version 2.0.0. Please update the tensorflow library by executing the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade tensorflow"
    ]
   },
   {
@@ -194,7 +206,7 @@
    "metadata": {},
    "source": [
     "**3.** We now select the spiral dataset and add noise to the training data (noise=50). What do you observe using the following network architecture?<br>\n",
-    "https://playground.tensorflow.org/#activation=sigmoid&batchSize=10&dataset=spiral&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=50&networkShape=4&seed=0.00906&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=true&ySquared=true&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false"
+    "https://playground.tensorflow.org/#activation=sigmoid&batchSize=10&dataset=spiral&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=50&networkShape=2&seed=0.00906&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=true&ySquared=true&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false"
    ]
   },
   {
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,8 +1350,8 @@
     "X_test  = X_test / 255.0\n",
     "\n",
     "# Reshape dataset to have a single channel \n",
-    "X_train = trainX.reshape((X_train.shape[0], 28, 28, 1)) # The CNN requires this layout (batch_size, height, width, n_channels)\n",
-    "X_test = testX.reshape((X_test.shape[0], 28, 28, 1)) # The CNN requires this layout (batch_size, height, width, n_channels)\n",
+    "X_train = X_train.reshape((X_train.shape[0], 28, 28, 1)) # The CNN requires this layout (batch_size, height, width, n_channels)\n",
+    "X_test = X_test.reshape((X_test.shape[0], 28, 28, 1)) # The CNN requires this layout (batch_size, height, width, n_channels)\n",
     "\n",
     "# One-hot encode target values\n",
     "y_train = to_categorical(y_train)\n",
@@ -1417,7 +1429,7 @@
     "model.add(Input(shape=(28,28,1)))\n",
     "# TO DO: Add at least 1 convolutional layer\n",
     "\n",
-    "model.add(Flatten()) # This flattens your 28*28 image into a vector of length (28*28=) 784. \n",
+    "model.add(Flatten()) # This flattens your 28*28 image into a vector of length 28*28= 784. \n",
     "model.add(Dense(256, activation='relu')) \n",
     "model.add(Dense(10, activation='softmax')) \n",
     "\n",
