--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -12,12 +12,22 @@
     "* _Target audience_: Medical students from the Charité\n",
     "* _Course date_: July 2020\n",
     "\n",
-    "> Extended from previous contributions by Jan Philipp Albrecht (j.p.albrecht@fu-berlin.de).\n",
-    "\n",
+    "> Extended from previous contributions by Jan Philipp Albrecht (j.p.albrecht@fu-berlin.de)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Aims of this session\n",
     "\n",
-    "This notebook will teach you the basic concepts necessary to understand and write basic Python code using practical examples based on the datasets you will use during the course!\n",
-    "\n",
+    "This notebook will teach you the basic concepts necessary to understand and write basic Python code using practical examples based on the datasets you will use during the course!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Learning goals\n",
     "\n",
     "In general, the goal should be to understand the ground concepts behind the material as other lectures depend on it. Do not worry if you don't know the answer to every question. Try to understand as much as possible and to ask often to solve to your problems.\n",
@@ -46,9 +56,13 @@
     "  - Defining and calling functions\n",
     "  - Importing modules\n",
     "\n",
-    "Don't hesitate to interrupt and ask if concepts remain unclear or tasks are not understood!\n",
-    "\n",
-    "\n",
+    "Don't hesitate to interrupt and ask if concepts remain unclear or tasks are not understood!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. References\n",
     "\n",
     "The official documentation for Python:\n",
@@ -60,16 +74,26 @@
     "- [Berlin.de dataset](https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/)\n",
     "- [PIMA Indians diabetes dataset](https://www.kaggle.com/uciml/pima-indians-diabetes-database)\n",
     "\n",
-    "***\n",
-    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Contents\n",
     "\n",
     "This is a learning-by-doing notebook alternating between theory and practice. First, a short introduction to a particular topic is given, showing examples with code. You are then ask to perform similar tasks to the examples in the theory.\n",
     "\n",
     "### Before we start!\n",
     "\n",
-    "Getting familiar with the data you will handle is one of the first steps in every data science pipeline. During the first three lessons we will work with the number of corona cases registered in Germany. RKI.de maintains a record of all CoViD-19 cases in Germany. Berlin.de also offers a dataset of corona cases split by neighborhood. We will use both to illustrate different aspects of Python while remaining relatable to the current events. The rest of the lessons will use the Pima Indians Diabetes Database.\n",
-    "\n",
+    "Getting familiar with the data you will handle is one of the first steps in every data science pipeline. During the first three lessons we will work with the number of corona cases registered in Germany. RKI.de maintains a record of all CoViD-19 cases in Germany. Berlin.de also offers a dataset of corona cases split by neighborhood. We will use both to illustrate different aspects of Python while remaining relatable to the current events. The rest of the lessons will use the Pima Indians Diabetes Database."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.1 Python and Jupyter Notebooks\n",
     "\n",
     "#### What is Python?\n",
@@ -217,9 +241,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'false' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-68514e8fd80e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mthis_is_a_boolean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthis_is_a_boolean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'false' is not defined"
+     ]
+    }
+   ],
    "source": [
     "this_is_a_boolean = false\n",
     "print(this_is_a_boolean)"
@@ -266,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,17 +351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['mitte', 'kreuzberg', 'kreuzberg']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "neighborhoods = [\"mitte\", \"kreuzberg\", \"kreuzberg\"]\n",
     "print(neighborhoods)"
@@ -358,29 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mitte\n",
-      "mitte\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-885be21e6ec0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0masdasd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighborhoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "neighborhoods = [\"mitte\", \"kreuzberg\", \"neukölln\"]\n",
     "print(neighborhoods[0])\n",
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -681,8 +689,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***\n",
-    "\n",
     "### 4.3 Flow control\n",
     "\n",
     "As any programming language python gives flow control possibilities: `if, else, for, while`.\n",
@@ -738,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Repetition: for-loop\n",
+    "#### Repetition: for-loop\n",
     "\n",
     "When we want to repeat the same action for different parameters, we wouldn't like to write the same code N times, right? That's what computers are for, anyway.\n",
     "\n",
@@ -827,9 +833,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'neighborhoods' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-626a97e9d287>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#  Try your best here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mneighborhood\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mneighborhoods\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'neighborhoods' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#  Try your best here\n",
     "count = 0\n",
@@ -855,8 +873,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***\n",
-    "\n",
     "### 4.4 Introduction to functions\n",
     "\n",
     "As you have seen, repeating a single operation is useful so you do not get bored writing the same lines again and again. In fact, avoiding the repetition of tasks is one of the main core concepts in programming! We are lazy and we want to do as little as possible. This leads to devising mechanisms to reuse the same code in a flexible way.\n",
@@ -934,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
