Make sure all notebooks run locally

--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Python programming: introduction to the language\n",
     "\n",
-    "* _Instructor_: Jaime Rodríguez-Guerra, AG Volkamer, Charité (jaime.rodriguez@charite.de). \n",
-    "* _Target audience_: Medical students from the Charité\n",
-    "* _Course date_: July 2020\n",
+    "* **Instructor**: Jaime Rodríguez-Guerra, AG Volkamer, Charité (jaime.rodriguez@charite.de). \n",
+    "* **Target audience**: Medical students from Charité\n",
+    "* **Course date**: July 2020\n",
     "\n",
     "> Extended from previous contributions by Jan Philipp Albrecht (j.p.albrecht@fu-berlin.de)."
    ]
