adapted general structure

--- a/week2_session2_images-MRI-dl.ipynb
+++ b/week2_session2_images-MRI-dl.ipynb
@@ -4,10 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Aims of this session\n",
+    "# AI in Medicine\n",
+    "From vectors and matrices to artificial intelligence\n",
+    "\n",
+    "## Images, MRI and Deep Learning\n",
+    "### Python Programming: *computer vision* and *pytorch*\n",
+    "\n",
+    "Instructors:\n",
+    "- Fabian Eitel, AG Ritter, Charité (fabian.eitel@charite.de)\n",
+    "\n",
+    "July 2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aims of this session\n",
     "\n",
     "- How to work with images and MRI data in programming languages. \n",
-    "- (optional) How to use a convolutional neural network (CNN) with images."
+    "- How to use a convolutional neural network (CNN) with images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instructions"
    ]
   },
   {
@@ -360,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -520,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -544,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -719,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -938,7 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create an instance of the NeuralNetwork class\n",
